tests/assembler/pass/test11.ial
type automatic Test11
{
    field instance int32[3] vec;
}
