tests/assembler/fail/test10.ial
type automatic ZeroSizeVector
{
    field instance float32[0] vec;
}
